--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
   "name": "cyberx-novokosino",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
-    "// Комментарий": "Мы добавляем создание файла .node-version ПЕРЕД запуском билда",
-    "build": "echo '20' > .node-version && next build",
-    "start": "node server.js",
+    "build": "next build",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^11.0.8",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.344.0",
-    "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "sass": "^1.71.1"
+    "next": "^14.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "sass": "^1.97.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "@types/node": "^20.19.27",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
+    "autoprefixer": "^10.4.23",
+    "eslint": "^9.39.2",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19",
+    "typescript": "^5.9.3"
   }
 }
