--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.7.9",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.344.0",
     "next": "^14.1.0",
+    "openai": "^6.16.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sass": "^1.97.0"
