--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "openai": "^6.16.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sass": "^1.97.0"
+    "sass": "^1.97.0",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@types/node": "^20.19.27",
