--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "lucide-react": "^0.344.0",
     "next": "^14.1.0",
     "openai": "^6.16.0",
+    "playwright": "^1.57.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sass": "^1.97.0",
-    "sharp": "^0.34.5"
+    "sharp": "^0.34.5",
+    "socket.io-client": "^4.8.3"
   },
   "devDependencies": {
     "@types/node": "^20.19.27",
